[package]
name = "eclale_graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
ash = "0.38.0"
ash-window = "0.13.0"
flo_curves = "0.7.3"
log = "0.4.22"
nalgebra = "0.33.0"
parking_lot = "0.12.3"
raw-window-handle = "0.6.2"

[dependencies.gpu-allocator]
version = "0.27.0"
default-features = false
features = ["vulkan"]

[dependencies.egui-ash-renderer]
version = "0.6.0"
features = ["gpu-allocator", "dynamic-rendering"]

